[gd_scene load_steps=6 format=4 uid="uid://dljs6t66c3owb"]

[ext_resource type="TileSet" uid="uid://l8pjpmqunb3r" path="res://Assets/Sprites/new_tile_set.tres" id="1_dddf5"]
[ext_resource type="PackedScene" uid="uid://b1xr6ko6ds6u2" path="res://Assets/Scenes/player.tscn" id="2_k0vnh"]
[ext_resource type="Script" uid="uid://6mmb7m8v1msj" path="res://Assets/Scripts/node.gd" id="3_1x3qo"]
[ext_resource type="PackedScene" uid="uid://hhblqqtfshlr" path="res://Assets/Scenes/enemy_1.tscn" id="4_dddf5"]
[ext_resource type="Script" uid="uid://rhothlrty1vf" path="res://Assets/Scenes/control.gd" id="5_yeowd"]

[node name="Area1" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD///j/AAAKAAEAAAAAAPj/AAALAAEAAAABAPb/AAAHAAAAAAABAPf/AAAHAAEAAAABAPj/AAAHAAIAAAD+//b/AAAIAAAAAAD+//f/AAAIAAEAAAD+//j/AAAIAAIAAAAAAPf/AAAFAAIAAAAAAPb/AAAGAAEAAAAAAPX/AAAGAAAAAAD///X/AAAGAAAAAAD///b/AAAGAAEAAAD///f/AAAFAAIAAAD+//X/AAAEAAIAAAABAPX/AAAEAAIAAADy//n/AAAAAAQAAADy//r/AAABAAQAAADy//v/AAAAAAQAAADy//z/AAAAAAQAAADy//3/AAAAAAQAAADy//7/AAAAAAQAAADy////AAAAAAQAAADy/wAAAAAAAAQAAADy/wEAAAAAAAQAAADy/wIAAAAAAAQAAADy/wMAAAAAAAQAAADy/wQAAAAAAAQAAADy/wUAAAAAAAQAAADy/wYAAAAAAAQAAADy/wcAAAAAAAQAAADy/wgAAAAAAAQAAADy/wkAAAAAAAQAAADy/woAAAAAAAQAAADy/wsAAAAAAAQAAADy/wwAAAAAAAQAAADy/w0AAAAAAAQAAADz//n/AAAAAAQAAADz//r/AAAAAAQAAADz//v/AAAAAAQAAADz//z/AAAAAAQAAADz//3/AAAAAAQAAADz//7/AAAAAAQAAADz////AAAAAAQAAADz/wAAAAAAAAQAAADz/wEAAAAAAAQAAADz/wIAAAAAAAQAAADz/wMAAAAAAAQAAADz/wQAAAAAAAQAAADz/wUAAAAAAAQAAADz/wYAAAAAAAQAAADz/wcAAAAAAAQAAADz/wgAAAAAAAQAAADz/wkAAAAAAAQAAADz/woAAAAAAAQAAADz/wsAAAAAAAQAAADz/wwAAAAAAAQAAADz/w0AAAAAAAQAAAD0//n/AAAAAAQAAAD0//r/AAAAAAQAAAD0//v/AAAAAAQAAAD0//z/AAAAAAQAAAD0//3/AAAAAAQAAAD0//7/AAAAAAQAAAD0////AAAAAAQAAAD0/wAAAAAAAAQAAAD0/wEAAAAAAAQAAAD0/wIAAAAAAAQAAAD0/wMAAAAAAAQAAAD0/wQAAAAAAAQAAAD0/wUAAAAAAAQAAAD0/wYAAAAAAAQAAAD0/wcAAAAAAAQAAAD0/wgAAAAAAAQAAAD0/wkAAAAAAAQAAAD0/woAAAAAAAQAAAD0/wsAAAAAAAQAAAD0/wwAAAAAAAQAAAD0/w0AAAAAAAQAAAD1//n/AAAAAAQAAAD1//r/AAAAAAQAAAD1//v/AAAAAAQAAAD1//z/AAAAAAQAAAD1//3/AAAAAAQAAAD1//7/AAAAAAQAAAD1////AAAAAAQAAAD1/wAAAAAAAAQAAAD1/wEAAAAAAAQAAAD1/wIAAAAAAAQAAAD1/wMAAAAAAAQAAAD1/wQAAAADAAMAAAD1/wUAAAADAAMAAAD1/wYAAAADAAMAAAD1/wcAAAADAAMAAAD1/wgAAAADAAMAAAD1/wkAAAAEAAMAAAD1/woAAAAAAAQAAAD1/wsAAAAAAAQAAAD1/wwAAAAAAAQAAAD1/w0AAAAAAAQAAAD2//n/AAAAAAQAAAD2//r/AAAAAAQAAAD2//v/AAAAAAQAAAD2//z/AAAAAAQAAAD2//3/AAAAAAQAAAD2//7/AAAAAAQAAAD2////AAAAAAQAAAD2/wAAAAAAAAQAAAD2/wEAAAAAAAQAAAD2/wIAAAAAAAQAAAD2/wMAAAAAAAQAAAD2/wQAAAAEAAMAAAD2/wUAAAAEAAMAAAD2/wYAAAAEAAMAAAD2/wcAAAAEAAMAAAD2/wgAAAAEAAMAAAD2/wkAAAAEAAMAAAD2/woAAAAAAAQAAAD2/wsAAAAAAAQAAAD2/wwAAAAAAAQAAAD2/w0AAAAAAAQAAAD3//n/AAAAAAQAAAD3//r/AAAAAAQAAAD3//v/AAAAAAQAAAD3//z/AAAAAAQAAAD3//3/AAAAAAQAAAD3//7/AAAAAAQAAAD3////AAAAAAQAAAD3/wAAAAAAAAQAAAD3/wEAAAAAAAQAAAD3/wIAAAAAAAQAAAD3/wMAAAAAAAQAAAD3/wQAAAAEAAMAAAD3/wUAAAAEAAMAAAD3/wYAAAAEAAMAAAD3/wcAAAAEAAIAAAD3/wgAAAAEAAMAAAD3/wkAAAAEAAMAAAD3/woAAAAAAAQAAAD3/wsAAAAAAAQAAAD3/wwAAAAAAAQAAAD3/w0AAAAAAAQAAAD4//n/AAAAAAQAAAD4//r/AAAAAAQAAAD4//v/AAAAAAQAAAD4//z/AAAAAAQAAAD4//3/AAAAAAQAAAD4//7/AAAAAAQAAAD4////AAAAAAQAAAD4/wAAAAAAAAQAAAD4/wEAAAAAAAQAAAD4/wIAAAAAAAQAAAD4/wMAAAAAAAQAAAD4/wQAAAAEAAMAAAD4/wUAAAAEAAMAAAD4/wYAAAAEAAMAAAD4/wcAAAAEAAIAAAD4/wgAAAAEAAMAAAD4/wkAAAAEAAMAAAD4/woAAAAAAAQAAAD4/wsAAAAAAAQAAAD4/wwAAAAAAAQAAAD4/w0AAAAAAAQAAAD5//n/AAAAAAQAAAD5//r/AAAAAAQAAAD5//v/AAAAAAQAAAD5//z/AAAAAAQAAAD5//3/AAAAAAQAAAD5//7/AAAAAAQAAAD5////AAAAAAQAAAD5/wAAAAAAAAQAAAD5/wEAAAAAAAQAAAD5/wIAAAAAAAQAAAD5/wMAAAAAAAQAAAD5/wQAAAAEAAMAAAD5/wUAAAAEAAMAAAD5/wYAAAAEAAMAAAD5/wcAAAAEAAMAAAD5/wgAAAAEAAMAAAD5/wkAAAAEAAMAAAD5/woAAAAAAAQAAAD5/wsAAAAAAAQAAAD5/wwAAAAAAAQAAAD5/w0AAAAAAAQAAAD6//n/AAAAAAQAAAD6//r/AAAAAAQAAAD6//v/AAABAAQAAAD6//z/AAAAAAQAAAD6//3/AAAAAAQAAAD6//7/AAAAAAQAAAD6////AAAAAAQAAAD6/wAAAAAAAAQAAAD6/wEAAAAAAAQAAAD6/wIAAAAAAAQAAAD6/wMAAAAAAAQAAAD6/wQAAAAEAAMAAAD6/wUAAAAEAAMAAAD6/wYAAAAEAAMAAAD6/wcAAAAEAAMAAAD6/wgAAAAEAAMAAAD6/wkAAAAEAAMAAAD6/woAAAAAAAQAAAD6/wsAAAAAAAQAAAD6/wwAAAAAAAQAAAD6/w0AAAAAAAQAAAD7//n/AAAAAAQAAAD7//r/AAAAAAQAAAD7//v/AAAAAAQAAAD7//z/AAAAAAQAAAD7//3/AAAAAAQAAAD7//7/AAAAAAQAAAD7////AAAAAAQAAAD7/wAAAAAAAAQAAAD7/wEAAAAAAAQAAAD7/wIAAAAAAAQAAAD7/wMAAAAAAAQAAAD7/wQAAAAAAAQAAAD7/wUAAAAAAAQAAAD7/wYAAAAAAAQAAAD7/wcAAAAAAAQAAAD7/wgAAAAAAAQAAAD7/wkAAAAAAAQAAAD7/woAAAAAAAQAAAD7/wsAAAAAAAQAAAD7/wwAAAAAAAQAAAD7/w0AAAAAAAQAAAD8//n/AAAAAAQAAAD8//r/AAAAAAQAAAD8//v/AAAAAAQAAAD8//z/AAAAAAQAAAD8//3/AAAAAAQAAAD8//7/AAAAAAQAAAD8////AAAAAAQAAAD8/wAAAAAAAAQAAAD8/wEAAAAAAAQAAAD8/wIAAAAAAAQAAAD8/wMAAAAAAAQAAAD8/wQAAAAAAAQAAAD8/wUAAAAAAAQAAAD8/wYAAAAAAAQAAAD8/wcAAAAAAAQAAAD8/wgAAAABAAQAAAD8/wkAAAAAAAQAAAD8/woAAAAAAAQAAAD8/wsAAAAAAAQAAAD8/wwAAAAAAAQAAAD8/w0AAAAAAAQAAAD9//n/AAAAAAQAAAD9//r/AAAAAAQAAAD9//v/AAAAAAQAAAD9//z/AAAAAAQAAAD9//3/AAAAAAQAAAD9//7/AAAAAAQAAAD9////AAAAAAQAAAD9/wAAAAAAAAQAAAD9/wEAAAAAAAQAAAD9/wIAAAAAAAQAAAD9/wMAAAAAAAQAAAD9/wQAAAAAAAQAAAD9/wUAAAAAAAQAAAD9/wYAAAAAAAQAAAD9/wcAAAAAAAQAAAD9/wgAAAAAAAQAAAD9/wkAAAAAAAQAAAD9/woAAAAAAAQAAAD9/wsAAAAAAAQAAAD9/wwAAAAAAAQAAAD9/w0AAAAAAAQAAAD+//n/AAAAAAQAAAD+//r/AAAAAAQAAAD+//v/AAAAAAQAAAD+//z/AAAAAAQAAAD+//3/AAAAAAQAAAD+//7/AAAAAAQAAAD+////AAAAAAQAAAD+/wAAAAAAAAQAAAD+/wEAAAAAAAQAAAD+/wIAAAAAAAQAAAD+/wMAAAAAAAQAAAD+/wQAAAAAAAQAAAD+/wUAAAAAAAQAAAD+/wYAAAAAAAQAAAD+/wcAAAAAAAQAAAD+/wgAAAAAAAQAAAD+/wkAAAAAAAQAAAD+/woAAAAAAAQAAAD+/wsAAAAAAAQAAAD+/wwAAAAAAAQAAAD+/w0AAAAAAAQAAAD///n/AAAGAAMAAAD///r/AAAGAAMAAAD///v/AAAGAAMAAAD///z/AAAGAAMAAAD///3/AAAGAAMAAAD///7/AAAGAAMAAAD/////AAAGAAMAAAD//wAAAAABAAQAAAD//wEAAAAAAAQAAAD//wIAAAAAAAQAAAD//wMAAAAAAAQAAAD//wQAAAAAAAQAAAD//wUAAAAAAAQAAAD//wYAAAAAAAQAAAD//wcAAAAAAAQAAAD//wgAAAAAAAQAAAD//wkAAAAAAAQAAAD//woAAAAAAAQAAAD//wsAAAAAAAQAAAD//wwAAAAAAAQAAAD//w0AAAAAAAQAAAAAAPn/AAAGAAMAAAAAAPr/AAAGAAMAAAAAAPv/AAAGAAMAAAAAAPz/AAAGAAMAAAAAAP3/AAAGAAMAAAAAAP7/AAAGAAMAAAAAAP//AAAGAAMAAAAAAAAAAAAAAAQAAAAAAAEAAAAAAAQAAAAAAAIAAAAAAAQAAAAAAAMAAAAAAAQAAAAAAAQAAAAAAAQAAAAAAAUAAAAAAAQAAAAAAAYAAAAAAAQAAAAAAAcAAAAAAAQAAAAAAAgAAAAAAAQAAAAAAAkAAAAAAAQAAAAAAAoAAAAAAAQAAAAAAAsAAAAAAAQAAAAAAAwAAAAAAAQAAAAAAA0AAAAAAAQAAAABAPn/AAAAAAQAAAABAPr/AAAAAAQAAAABAPv/AAAAAAQAAAABAPz/AAAAAAQAAAABAP3/AAAAAAQAAAABAP7/AAAAAAQAAAABAP//AAAAAAQAAAABAAAAAAAAAAQAAAABAAEAAAAAAAQAAAABAAIAAAAAAAQAAAABAAMAAAAAAAQAAAABAAQAAAAAAAQAAAABAAUAAAAAAAQAAAABAAYAAAAAAAQAAAABAAcAAAAAAAQAAAABAAgAAAAAAAQAAAABAAkAAAABAAQAAAABAAoAAAAAAAQAAAABAAsAAAABAAQAAAABAAwAAAAAAAQAAAABAA0AAAAAAAQAAAACAPn/AAAAAAQAAAACAPr/AAAAAAQAAAACAPv/AAAAAAQAAAACAPz/AAAAAAQAAAACAP3/AAAAAAQAAAACAP7/AAAAAAQAAAACAP//AAAAAAQAAAACAAAAAAAAAAQAAAACAAEAAAAAAAQAAAACAAIAAAAAAAQAAAACAAMAAAAAAAQAAAACAAQAAAAAAAQAAAACAAUAAAAAAAQAAAACAAYAAAAAAAQAAAACAAcAAAAAAAQAAAACAAgAAAAAAAQAAAACAAkAAAAAAAQAAAACAAoAAAAAAAQAAAACAAsAAAAAAAQAAAACAAwAAAAAAAQAAAACAA0AAAAAAAQAAAADAPn/AAAAAAQAAAADAPr/AAAAAAQAAAADAPv/AAAAAAQAAAADAPz/AAAAAAQAAAADAP3/AAAAAAQAAAADAP7/AAAAAAQAAAADAP//AAAAAAQAAAADAAAAAAAAAAQAAAADAAEAAAABAAQAAAADAAIAAAAAAAQAAAADAAMAAAAAAAQAAAADAAQAAAAAAAQAAAADAAUAAAAAAAQAAAADAAYAAAAAAAQAAAADAAcAAAAAAAQAAAADAAgAAAAAAAQAAAADAAkAAAAAAAQAAAADAAoAAAAAAAQAAAADAAsAAAAAAAQAAAADAAwAAAABAAQAAAADAA0AAAAAAAQAAAAEAPn/AAAAAAQAAAAEAPr/AAAAAAQAAAAEAPv/AAAAAAQAAAAEAPz/AAAAAAQAAAAEAP3/AAAAAAQAAAAEAP7/AAAAAAQAAAAEAP//AAAAAAQAAAAEAAAAAAAAAAQAAAAEAAEAAAAAAAQAAAAEAAIAAAAAAAQAAAAEAAMAAAAAAAQAAAAEAAQAAAAAAAQAAAAEAAUAAAAAAAQAAAAEAAYAAAAAAAQAAAAEAAcAAAAAAAQAAAAEAAgAAAAAAAQAAAAEAAkAAAAAAAQAAAAEAAoAAAAEAAUAAAAEAAsAAAAFAAUAAAAEAAwAAAAAAAQAAAAEAA0AAAAAAAQAAAAFAPn/AAAAAAQAAAAFAPr/AAAAAAQAAAAFAPv/AAAAAAQAAAAFAPz/AAAAAAQAAAAFAP3/AAAAAAQAAAAFAP7/AAAAAAQAAAAFAP//AAAAAAQAAAAFAAAAAAAAAAQAAAAFAAEAAAAAAAQAAAAFAAIAAAAAAAQAAAAFAAMAAAAAAAQAAAAFAAQAAAAAAAQAAAAFAAUAAAAAAAQAAAAFAAYAAAAAAAQAAAAFAAcAAAAAAAQAAAAFAAgAAAAAAAQAAAAFAAkAAAAAAAQAAAAFAAoAAAAEAAUAAAAFAAsAAAAFAAUAAAAFAAwAAAAAAAQAAAAFAA0AAAAAAAQAAAAGAPn/AAAAAAQAAAAGAPr/AAAAAAQAAAAGAPv/AAAAAAQAAAAGAPz/AAAAAAQAAAAGAP3/AAAAAAQAAAAGAP7/AAAAAAQAAAAGAP//AAAAAAQAAAAGAAAAAAAAAAQAAAAGAAEAAAAAAAQAAAAGAAIAAAAAAAQAAAAGAAMAAAAAAAQAAAAGAAQAAAAAAAQAAAAGAAUAAAAAAAQAAAAGAAYAAAAAAAQAAAAGAAcAAAAAAAQAAAAGAAgAAAAAAAQAAAAGAAkAAAAAAAQAAAAGAAoAAAAEAAUAAAAGAAsAAAAFAAUAAAAGAAwAAAAAAAQAAAAGAA0AAAAAAAQAAAAHAPn/AAAAAAQAAAAHAPr/AAAAAAQAAAAHAPv/AAAAAAQAAAAHAPz/AAAAAAQAAAAHAP3/AAAAAAQAAAAHAP7/AAAAAAQAAAAHAP//AAAAAAQAAAAHAAAAAAAAAAQAAAAHAAEAAAAAAAQAAAAHAAIAAAAAAAQAAAAHAAMAAAAAAAQAAAAHAAQAAAAAAAQAAAAHAAUAAAAAAAQAAAAHAAYAAAAAAAQAAAAHAAcAAAAAAAQAAAAHAAgAAAAAAAQAAAAHAAkAAAAAAAQAAAAHAAoAAAAEAAUAAAAHAAsAAAAFAAUAAAAHAAwAAAAAAAQAAAAHAA0AAAAAAAQAAAAIAPn/AAAAAAQAAAAIAPr/AAAAAAQAAAAIAPv/AAAAAAQAAAAIAPz/AAAAAAQAAAAIAP3/AAABAAQAAAAIAP7/AAAAAAQAAAAIAP//AAABAAQAAAAIAAAAAAAAAAQAAAAIAAEAAAAAAAQAAAAIAAIAAAAAAAQAAAAIAAMAAAAAAAQAAAAIAAQAAAAAAAQAAAAIAAUAAAAAAAQAAAAIAAYAAAAAAAQAAAAIAAcAAAAAAAQAAAAIAAgAAAAAAAQAAAAIAAkAAAAAAAQAAAAIAAoAAAAEAAUAAAAIAAsAAAAFAAUAAAAIAAwAAAAAAAQAAAAIAA0AAAAAAAQAAAAJAPn/AAAAAAQAAAAJAPr/AAAAAAQAAAAJAPv/AAAAAAQAAAAJAPz/AAAAAAQAAAAJAP3/AAAAAAQAAAAJAP7/AAAAAAQAAAAJAP//AAAAAAQAAAAJAAAAAAAAAAQAAAAJAAEAAAAAAAQAAAAJAAIAAAAAAAQAAAAJAAMAAAAAAAQAAAAJAAQAAAAAAAQAAAAJAAUAAAAAAAQAAAAJAAYAAAAAAAQAAAAJAAcAAAAAAAQAAAAJAAgAAAAAAAQAAAAJAAkAAAAAAAQAAAAJAAoAAAAEAAUAAAAJAAsAAAAFAAUAAAAJAAwAAAAAAAQAAAAJAA0AAAAAAAQAAAAKAPn/AAAAAAQAAAAKAPr/AAAAAAQAAAAKAPv/AAAAAAQAAAAKAPz/AAAAAAQAAAAKAP3/AAAAAAQAAAAKAP7/AAAAAAQAAAAKAP//AAAAAAQAAAAKAAAAAAAAAAQAAAAKAAEAAAAAAAQAAAAKAAIAAAAAAAQAAAAKAAMAAAAAAAQAAAAKAAQAAAAAAAQAAAAKAAUAAAAAAAQAAAAKAAYAAAAAAAQAAAAKAAcAAAAAAAQAAAAKAAgAAAAAAAQAAAAKAAkAAAAAAAQAAAAKAAoAAAAEAAUAAAAKAAsAAAAFAAUAAAAKAAwAAAAAAAQAAAAKAA0AAAAAAAQAAAALAPn/AAAAAAQAAAALAPr/AAAAAAQAAAALAPv/AAAAAAQAAAALAPz/AAAAAAQAAAALAP3/AAAAAAQAAAALAP7/AAAAAAQAAAALAP//AAAAAAQAAAALAAAAAAABAAQAAAALAAEAAAAAAAQAAAALAAIAAAAAAAQAAAALAAMAAAAAAAQAAAALAAQAAAAAAAQAAAALAAUAAAABAAQAAAALAAYAAAAAAAQAAAALAAcAAAAAAAQAAAALAAgAAAAAAAQAAAALAAkAAAAAAAQAAAALAAoAAAAEAAUAAAALAAsAAAAFAAUAAAALAAwAAAAAAAQAAAALAA0AAAAAAAQAAAAMAPn/AAAAAAQAAAAMAPr/AAAAAAQAAAAMAPv/AAAAAAQAAAAMAPz/AAAAAAQAAAAMAP3/AAAAAAQAAAAMAP7/AAAAAAQAAAAMAP//AAAAAAQAAAAMAAAAAAAAAAQAAAAMAAEAAAAAAAQAAAAMAAIAAAAAAAQAAAAMAAMAAAAAAAQAAAAMAAQAAAAAAAQAAAAMAAUAAAAAAAQAAAAMAAYAAAAAAAQAAAAMAAcAAAAAAAQAAAAMAAgAAAAAAAQAAAAMAAkAAAAAAAQAAAAMAAoAAAAEAAUAAAAMAAsAAAAFAAUAAAAMAAwAAAAAAAQAAAAMAA0AAAAAAAQAAAANAPn/AAAAAAQAAAANAPr/AAAAAAQAAAANAPv/AAAAAAQAAAANAPz/AAAAAAQAAAANAP3/AAAAAAQAAAANAP7/AAAAAAQAAAANAP//AAAAAAQAAAANAAAAAAAAAAQAAAANAAEAAAAAAAQAAAANAAIAAAAAAAQAAAANAAMAAAAAAAQAAAANAAQAAAAAAAQAAAANAAUAAAAAAAQAAAANAAYAAAAAAAQAAAANAAcAAAAAAAQAAAANAAgAAAAAAAQAAAANAAkAAAAAAAQAAAANAAoAAAAAAAQAAAANAAsAAAAAAAQAAAANAAwAAAAAAAQAAAANAA0AAAABAAQAAAAOAPn/AAAAAAQAAAAOAPr/AAAAAAQAAAAOAPv/AAAAAAQAAAAOAPz/AAAAAAQAAAAOAP3/AAAAAAQAAAAOAP7/AAAAAAQAAAAOAP//AAAAAAQAAAAOAAAAAAAAAAQAAAAOAAEAAAAAAAQAAAAOAAIAAAAAAAQAAAAOAAMAAAAAAAQAAAAOAAQAAAAAAAQAAAAOAAUAAAAAAAQAAAAOAAYAAAAAAAQAAAAOAAcAAAAAAAQAAAAOAAgAAAAAAAQAAAAOAAkAAAAAAAQAAAAOAAoAAAAAAAQAAAAOAAsAAAAAAAQAAAAOAAwAAAAAAAQAAAAOAA0AAAAAAAQAAADy/w4AAAAAAAQAAADy/w8AAAAAAAQAAADy/xAAAAAAAAQAAADy/xEAAAAAAAQAAADy/xIAAAAAAAQAAADy/xMAAAAAAAQAAADy/xQAAAAAAAQAAADy/xUAAAAAAAQAAADy/xYAAAAAAAQAAADz/w4AAAAAAAQAAADz/w8AAAAAAAQAAADz/xAAAAAAAAQAAADz/xEAAAAAAAQAAADz/xIAAAAAAAQAAADz/xMAAAAAAAQAAADz/xQAAAAAAAQAAADz/xUAAAAAAAQAAADz/xYAAAAAAAQAAAD0/w4AAAAAAAQAAAD0/w8AAAAAAAQAAAD0/xAAAAAAAAQAAAD0/xEAAAAAAAQAAAD0/xIAAAAAAAQAAAD0/xMAAAAAAAQAAAD0/xQAAAAAAAQAAAD0/xUAAAAAAAQAAAD0/xYAAAAAAAQAAAD1/w4AAAAAAAQAAAD1/w8AAAAKAAYAAAD1/xAAAAAKAAYAAAD1/xEAAAAAAAQAAAD1/xIAAAAAAAQAAAD1/xMAAAAAAAQAAAD1/xQAAAAAAAQAAAD1/xUAAAAAAAQAAAD1/xYAAAAAAAQAAAD2/w4AAAAKAAYAAAD2/w8AAAAKAAYAAAD2/xAAAAAKAAYAAAD2/xEAAAAAAAQAAAD2/xIAAAAAAAQAAAD2/xMAAAAAAAQAAAD2/xQAAAAAAAQAAAD2/xUAAAAAAAQAAAD2/xYAAAAAAAQAAAD3/w4AAAAKAAYAAAD3/w8AAAAKAAYAAAD3/xAAAAAKAAYAAAD3/xEAAAAAAAQAAAD3/xIAAAAAAAQAAAD3/xMAAAAAAAQAAAD3/xQAAAAAAAQAAAD3/xUAAAAAAAQAAAD3/xYAAAAAAAQAAAD4/w4AAAAAAAQAAAD4/w8AAAAKAAYAAAD4/xAAAAAAAAQAAAD4/xEAAAAAAAQAAAD4/xIAAAAAAAQAAAD4/xMAAAAAAAQAAAD4/xQAAAAAAAQAAAD4/xUAAAAAAAQAAAD4/xYAAAAAAAQAAAD5/w4AAAAAAAQAAAD5/w8AAAAAAAQAAAD5/xAAAAAAAAQAAAD5/xEAAAAAAAQAAAD5/xIAAAAAAAQAAAD5/xMAAAAAAAQAAAD5/xQAAAAAAAQAAAD5/xUAAAAAAAQAAAD5/xYAAAAAAAQAAAD6/w4AAAAAAAQAAAD6/w8AAAAAAAQAAAD6/xAAAAAAAAQAAAD6/xEAAAAAAAQAAAD6/xIAAAAAAAQAAAD6/xMAAAAAAAQAAAD6/xQAAAAAAAQAAAD6/xUAAAAAAAQAAAD6/xYAAAAAAAQAAAD7/w4AAAAAAAQAAAD7/w8AAAAAAAQAAAD7/xAAAAAAAAQAAAD7/xEAAAAAAAQAAAD7/xIAAAAAAAQAAAD7/xMAAAAAAAQAAAD7/xQAAAAAAAQAAAD7/xUAAAAAAAQAAAD7/xYAAAAAAAQAAAD8/w4AAAAAAAQAAAD8/w8AAAAAAAQAAAD8/xAAAAAAAAQAAAD8/xEAAAAAAAQAAAD8/xIAAAAAAAQAAAD8/xMAAAAAAAQAAAD8/xQAAAAAAAQAAAD8/xUAAAAAAAQAAAD8/xYAAAAAAAQAAAD9/w4AAAAAAAQAAAD9/w8AAAAAAAQAAAD9/xAAAAAAAAQAAAD9/xEAAAAAAAQAAAD9/xIAAAAAAAQAAAD9/xMAAAAAAAQAAAD9/xQAAAAAAAQAAAD9/xUAAAAAAAQAAAD9/xYAAAAAAAQAAAD+/w4AAAAAAAQAAAD+/w8AAAAAAAQAAAD+/xAAAAAAAAQAAAD+/xEAAAAAAAQAAAD+/xIAAAAAAAQAAAD+/xMAAAAAAAQAAAD+/xQAAAAAAAQAAAD+/xUAAAABAAQAAAD+/xYAAAAAAAQAAAD//w4AAAAAAAQAAAD//w8AAAAAAAQAAAD//xAAAAAAAAQAAAD//xEAAAAAAAQAAAD//xIAAAAAAAQAAAD//xMAAAAAAAQAAAD//xQAAAAAAAQAAAD//xUAAAAAAAQAAAD//xYAAAAAAAQAAAAAAA4AAAAAAAQAAAAAAA8AAAAAAAQAAAAAABAAAAAAAAQAAAAAABEAAAAAAAQAAAAAABIAAAAAAAQAAAAAABMAAAAAAAQAAAAAABQAAAAAAAQAAAAAABUAAAAAAAQAAAAAABYAAAAAAAQAAAABAA4AAAAAAAQAAAABAA8AAAAAAAQAAAABABAAAAAAAAQAAAABABEAAAAAAAQAAAABABIAAAAAAAQAAAABABMAAAAAAAQAAAABABQAAAAAAAQAAAABABUAAAAAAAQAAAABABYAAAAAAAQAAAACAA4AAAAAAAQAAAACAA8AAAAAAAQAAAACABAAAAAAAAQAAAACABEAAAAAAAQAAAACABIAAAAAAAQAAAACABMAAAAAAAQAAAACABQAAAAAAAQAAAACABUAAAAAAAQAAAACABYAAAAAAAQAAAADAA4AAAAAAAQAAAADAA8AAAAAAAQAAAADABAAAAAAAAQAAAADABEAAAAAAAQAAAADABIAAAAAAAQAAAADABMAAAAAAAQAAAADABQAAAAAAAQAAAADABUAAAAAAAQAAAADABYAAAAAAAQAAAAEAA4AAAAAAAQAAAAEAA8AAAAAAAQAAAAEABAAAAAAAAQAAAAEABEAAAAAAAQAAAAEABIAAAAAAAQAAAAEABMAAAAAAAQAAAAEABQAAAAAAAQAAAAEABUAAAAAAAQAAAAEABYAAAAAAAQAAAAFAA4AAAAAAAQAAAAFAA8AAAAAAAQAAAAFABAAAAAAAAQAAAAFABEAAAAAAAQAAAAFABIAAAAAAAQAAAAFABMAAAAAAAQAAAAFABQAAAABAAQAAAAFABUAAAAAAAQAAAAFABYAAAAAAAQAAAAGAA4AAAAAAAQAAAAGAA8AAAAAAAQAAAAGABAAAAAAAAQAAAAGABEAAAAAAAQAAAAGABIAAAAAAAQAAAAGABMAAAABAAQAAAAGABQAAAAAAAQAAAAGABUAAAAAAAQAAAAGABYAAAAAAAQAAAAHAA4AAAAAAAQAAAAHAA8AAAAAAAQAAAAHABAAAAAAAAQAAAAHABEAAAAAAAQAAAAHABIAAAAAAAQAAAAHABMAAAAAAAQAAAAHABQAAAAAAAQAAAAHABUAAAAAAAQAAAAHABYAAAAAAAQAAAAIAA4AAAAAAAQAAAAIAA8AAAAAAAQAAAAIABAAAAAAAAQAAAAIABEAAAAAAAQAAAAIABIAAAAAAAQAAAAIABMAAAAAAAQAAAAIABQAAAAAAAQAAAAIABUAAAAAAAQAAAAIABYAAAAAAAQAAAAJAA4AAAAAAAQAAAAJAA8AAAAAAAQAAAAJABAAAAAAAAQAAAAJABEAAAAAAAQAAAAJABIAAAAAAAQAAAAJABMAAAAAAAQAAAAJABQAAAAAAAQAAAAJABUAAAAAAAQAAAAJABYAAAAAAAQAAAAKAA4AAAAAAAQAAAAKAA8AAAAAAAQAAAAKABAAAAAAAAQAAAAKABEAAAAAAAQAAAAKABIAAAAAAAQAAAAKABMAAAABAAQAAAAKABQAAAAAAAQAAAAKABUAAAAAAAQAAAAKABYAAAAAAAQAAAALAA4AAAAAAAQAAAALAA8AAAAAAAQAAAALABAAAAAAAAQAAAALABEAAAAAAAQAAAALABIAAAAAAAQAAAALABMAAAAAAAQAAAALABQAAAAAAAQAAAALABUAAAAAAAQAAAALABYAAAAAAAQAAAAMAA4AAAAAAAQAAAAMAA8AAAAAAAQAAAAMABAAAAAAAAQAAAAMABEAAAAAAAQAAAAMABIAAAAAAAQAAAAMABMAAAAAAAQAAAAMABQAAAAAAAQAAAAMABUAAAAAAAQAAAAMABYAAAAAAAQAAAANAA4AAAAAAAQAAAANAA8AAAAAAAQAAAANABAAAAAAAAQAAAANABEAAAAAAAQAAAANABIAAAAAAAQAAAANABMAAAAAAAQAAAANABQAAAAAAAQAAAANABUAAAAAAAQAAAANABYAAAAAAAQAAAAOAA4AAAAAAAQAAAAOAA8AAAAAAAQAAAAOABAAAAAAAAQAAAAOABEAAAAAAAQAAAAOABIAAAAAAAQAAAAOABMAAAAAAAQAAAAOABQAAAAAAAQAAAAOABUAAAAAAAQAAAAOABYAAAAAAAQAAAACAPX/AAACAAEAAAACAPb/AAACAAEAAAACAPf/AAACAAEAAAACAPj/AAACAAEAAAADAPX/AAACAAEAAAADAPb/AAACAAEAAAADAPf/AAAEAAIAAAADAPj/AAACAAEAAAAEAPX/AAACAAEAAAAEAPb/AAACAAEAAAAEAPf/AAACAAEAAAAEAPj/AAACAAEAAAAFAPX/AAACAAEAAAAFAPb/AAACAAEAAAAFAPf/AAAEAAIAAAAFAPj/AAACAAEAAAAGAPX/AAACAAEAAAAGAPb/AAACAAEAAAAGAPf/AAACAAEAAAAGAPj/AAACAAEAAAAHAPX/AAACAAEAAAAHAPb/AAACAAEAAAAHAPf/AAAEAAIAAAAHAPj/AAACAAEAAAAIAPX/AAACAAEAAAAIAPb/AAACAAEAAAAIAPf/AAACAAEAAAAIAPj/AAACAAEAAAAJAPX/AAACAAEAAAAJAPb/AAACAAEAAAAJAPf/AAAEAAIAAAAJAPj/AAACAAEAAAAKAPX/AAACAAEAAAAKAPb/AAACAAEAAAAKAPf/AAACAAEAAAAKAPj/AAACAAEAAAALAPX/AAACAAEAAAALAPb/AAACAAEAAAALAPf/AAAEAAIAAAALAPj/AAACAAEAAAAMAPX/AAACAAEAAAAMAPb/AAACAAEAAAAMAPf/AAACAAEAAAAMAPj/AAACAAEAAAANAPX/AAACAAEAAAANAPb/AAACAAEAAAANAPf/AAAEAAIAAAANAPj/AAACAAEAAAAOAPX/AAACAAEAAAAOAPb/AAACAAEAAAAOAPf/AAACAAEAAAAOAPj/AAACAAEAAADy//X/AAACAAEAAADy//b/AAACAAEAAADy//f/AAACAAEAAADy//j/AAACAAEAAADz//X/AAACAAEAAADz//b/AAACAAEAAADz//f/AAACAAEAAADz//j/AAACAAEAAAD0//X/AAACAAEAAAD0//b/AAACAAEAAAD0//f/AAAEAAIAAAD0//j/AAACAAEAAAD1//X/AAACAAEAAAD1//b/AAACAAEAAAD1//f/AAACAAEAAAD1//j/AAACAAEAAAD2//X/AAACAAEAAAD2//b/AAACAAEAAAD2//f/AAAEAAIAAAD2//j/AAACAAEAAAD3//X/AAACAAEAAAD3//b/AAACAAEAAAD3//f/AAACAAEAAAD3//j/AAACAAEAAAD4//X/AAACAAEAAAD4//b/AAACAAEAAAD4//f/AAAEAAIAAAD4//j/AAACAAEAAAD5//X/AAACAAEAAAD5//b/AAACAAEAAAD5//f/AAACAAEAAAD5//j/AAACAAEAAAD6//X/AAACAAEAAAD6//b/AAACAAEAAAD6//f/AAAEAAIAAAD6//j/AAACAAEAAAD7//X/AAACAAEAAAD7//b/AAACAAEAAAD7//f/AAACAAEAAAD7//j/AAACAAEAAAD8//X/AAACAAEAAAD8//b/AAACAAEAAAD8//f/AAAEAAIAAAD8//j/AAACAAEAAAD9//X/AAACAAEAAAD9//b/AAACAAEAAAD9//f/AAACAAEAAAD9//j/AAACAAEAAADx//n/AAABAAEAAADx//r/AAABAAEAAADx//v/AAABAAEAAADx//z/AAABAAEAAADx//3/AAABAAEAAADx//7/AAABAAEAAADx////AAABAAEAAADx/wAAAAABAAEAAADx/wEAAAABAAEAAADx/wIAAAABAAEAAADx/wMAAAABAAEAAADx/wQAAAABAAEAAADx/wUAAAABAAEAAADx/wYAAAABAAEAAADx/wcAAAABAAEAAADx/wgAAAABAAEAAADx/wkAAAABAAEAAADx/woAAAABAAEAAADx/wsAAAABAAEAAADx/wwAAAABAAEAAADx/w0AAAABAAEAAADx/w4AAAABAAEAAADx/w8AAAABAAEAAADx/xAAAAABAAEAAADx/xEAAAABAAEAAADx/xIAAAABAAEAAADx/xMAAAABAAEAAADx/xQAAAABAAEAAADx/xUAAAABAAEAAADx/xYAAAABAAEAAAAPAPn/AAADAAEAAAAPAPr/AAADAAEAAAAPAPv/AAADAAEAAAAPAPz/AAADAAEAAAAPAP3/AAADAAEAAAAPAP7/AAADAAEAAAAPAP//AAADAAEAAAAPAAAAAAADAAEAAAAPAAEAAAADAAEAAAAPAAIAAAADAAEAAAAPAAMAAAADAAEAAAAPAAQAAAADAAEAAAAPAAUAAAADAAEAAAAPAAYAAAADAAEAAAAPAAcAAAADAAEAAAAPAAgAAAADAAEAAAAPAAkAAAADAAEAAAAPAAoAAAADAAEAAAAPAAsAAAADAAEAAAAPAAwAAAADAAEAAAAPAA0AAAADAAEAAAAPAA4AAAADAAEAAAAPAA8AAAADAAEAAAAPABAAAAADAAEAAAAPABEAAAADAAEAAAAPABIAAAADAAEAAAAPABMAAAADAAEAAAAPABQAAAADAAEAAAAPABUAAAADAAEAAAAPABYAAAADAAEAAADy/xcAAAAEAAYAAAAOABcAAAAGAAYAAADz/xcAAAAFAAYAAAD0/xcAAAAFAAYAAAD1/xcAAAAFAAYAAAD2/xcAAAAFAAYAAAD3/xcAAAAFAAYAAAD4/xcAAAAFAAYAAAD5/xcAAAAFAAYAAAD6/xcAAAAFAAYAAAD7/xcAAAAFAAYAAAD8/xcAAAAFAAYAAAD9/xcAAAAFAAYAAAD+/xcAAAAFAAYAAAD//xcAAAAFAAYAAAAAABcAAAAFAAYAAAABABcAAAAFAAYAAAACABcAAAAFAAYAAAADABcAAAAFAAYAAAAEABcAAAAFAAYAAAAFABcAAAAFAAYAAAAGABcAAAAFAAYAAAAHABcAAAAFAAYAAAAIABcAAAAFAAYAAAAJABcAAAAFAAYAAAAKABcAAAAFAAYAAAALABcAAAAFAAYAAAAMABcAAAAFAAYAAAANABcAAAAFAAYAAAA=")
tile_set = ExtResource("1_dddf5")

[node name="Player" parent="." instance=ExtResource("2_k0vnh")]
position = Vector2(0, 335)

[node name="Node" type="Node" parent="."]
script = ExtResource("3_1x3qo")

[node name="CanvasLayer" type="CanvasLayer" parent="Node"]

[node name="Control" type="Control" parent="Node/CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_yeowd")

[node name="Label" type="Label" parent="Node/CanvasLayer/Control"]
layout_mode = 0
offset_left = -315.0
offset_top = -46.0
offset_right = -275.0
offset_bottom = -23.0

[node name="speedButton" type="Button" parent="Node/CanvasLayer/Control"]
layout_mode = 0
offset_left = -55.0
offset_top = 74.0
offset_right = 185.0
offset_bottom = 127.0
theme_override_font_sizes/font_size = 32
text = "Increase speed"

[node name="DamageButton" type="Button" parent="Node/CanvasLayer/Control"]
layout_mode = 0
offset_left = -70.0
offset_top = 141.0
offset_right = 213.0
offset_bottom = 194.0
theme_override_font_sizes/font_size = 32
text = "Increase Damage "

[node name="HealthButton" type="Button" parent="Node/CanvasLayer/Control"]
layout_mode = 0
offset_left = -56.0
offset_top = 209.0
offset_right = 113.0
offset_bottom = 262.0
theme_override_font_sizes/font_size = 32
text = "Increase Health"

[node name="Enemy1" parent="." instance=ExtResource("4_dddf5")]
position = Vector2(-67, -73)

[node name="Enemy2" parent="." instance=ExtResource("4_dddf5")]
position = Vector2(97, -72)

[node name="Enemy3" parent="." instance=ExtResource("4_dddf5")]
position = Vector2(-3, 14)

[node name="Enemy4" parent="." instance=ExtResource("4_dddf5")]
position = Vector2(-167, -6)

[node name="Enemy5" parent="." instance=ExtResource("4_dddf5")]
position = Vector2(108, 9)

[node name="Enemy6" parent="." instance=ExtResource("4_dddf5")]
position = Vector2(-156, -83)

[node name="Enemy7" parent="." instance=ExtResource("4_dddf5")]
position = Vector2(-76, -1)

[node name="Enemy8" parent="." instance=ExtResource("4_dddf5")]
position = Vector2(194, -70)

[node name="Enemy9" parent="." instance=ExtResource("4_dddf5")]
position = Vector2(9, -67)

[node name="Enemy10" parent="." instance=ExtResource("4_dddf5")]
position = Vector2(195, 26)

[connection signal="pressed" from="Node/CanvasLayer/Control/speedButton" to="Node/CanvasLayer/Control" method="_on_speed_button_pressed"]
[connection signal="pressed" from="Node/CanvasLayer/Control/DamageButton" to="Node/CanvasLayer/Control" method="_on_damage_button_pressed"]
[connection signal="pressed" from="Node/CanvasLayer/Control/HealthButton" to="Node/CanvasLayer/Control" method="_on_health_button_pressed"]
